--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 .App {
-  text-align: center;
+  width: 800px;
+
 }
 
 .App-logo {
@@ -47,4 +62,17 @@
 .page__current {
   border: 2px solid orange;
 
+}
+
+.navbar {
+  height: 50px;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  background: #676c72;
+}
+
+.navbar__links {
+  margin-left: auto;
 }
